data features and classes

--- a/main.ipynb
+++ b/main.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -52,6 +52,104 @@
     "    print(\"CUDA device name:\", torch.cuda.get_device_name(torch.cuda.current_device()))\n",
     "else:\n",
     "    print(\"No CUDA devices found.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\randa\\AppData\\Local\\Temp\\ipykernel_43084\\3843897812.py:12: DtypeWarning: Columns (1) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  dataframes[df_name] = pd.read_csv(file_path)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import os\n",
+    "dataframes = {}\n",
+    "directory_path = 'Arrhythmia_Dataset'\n",
+    "all_files = os.listdir(directory_path)\n",
+    "\n",
+    "for file in os.listdir(directory_path):\n",
+    "    if file.endswith('.csv'):\n",
+    "        file_path = os.path.join(directory_path, file)\n",
+    "        # Remove the .csv extension for the DataFrame name\n",
+    "        df_name = os.path.splitext(file)[0]\n",
+    "        dataframes[df_name] = pd.read_csv(file_path)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_keys(['INCART 2-lead Arrhythmia Database', 'MIT-BIH Arrhythmia Database', 'MIT-BIH Supraventricular Arrhythmia Database', 'Sudden Cardiac Death Holter Database'])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dataframes.keys())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_df = dataframes['MIT-BIH Arrhythmia Database']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Splitting into features and class lables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_data = data_df.iloc[:, 2:]\n",
+    "y_label = data_df[['type']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "type\n",
+       "N       90083\n",
+       "VEB      7009\n",
+       "SVEB     2779\n",
+       "F         803\n",
+       "Q          15\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_label.value_counts()"
    ]
   }
  ],
