transformers (not working)

--- a/main.ipynb
+++ b/main.ipynb
@@ -11,14 +11,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Develop  a  deep  learning  model  that  can  accurately  classify  heartbeats  from  ECG  signals.  You  are \n",
-    "encouraged  to  explore  different  neural  network  architectures  and  techniques,  going  beyond  simple \n",
-    "feedforward networks. "
+    "We shall evaluate all models on unseen data, the mitbih_test dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -51,18 +49,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\randa\\AppData\\Local\\Temp\\ipykernel_43900\\1362218957.py:18: DtypeWarning: Columns (1) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  dataframes[df_name] = pd.read_csv(file_path)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -73,7 +62,7 @@
     "\n",
     "import os\n",
     "dataframes = {}\n",
-    "directory_path = 'Arrhythmia_Dataset'\n",
+    "directory_path = 'Heartbeat_Dataset'\n",
     "all_files = os.listdir(directory_path)\n",
     "\n",
     "for file in os.listdir(directory_path):\n",
@@ -86,14 +75,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dict_keys(['INCART 2-lead Arrhythmia Database', 'MIT-BIH Arrhythmia Database', 'MIT-BIH Supraventricular Arrhythmia Database', 'Sudden Cardiac Death Holter Database'])\n"
+      "dict_keys(['mitbih_test', 'mitbih_train', 'ptbdb_abnormal', 'ptbdb_normal'])\n"
      ]
     }
    ],
@@ -103,41 +92,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_df = dataframes['INCART 2-lead Arrhythmia Database']"
+    "test_df = dataframes['mitbih_test']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.000000000000000000e+00.65\n",
+      "N    18117\n",
+      "Q     1608\n",
+      "V     1448\n",
+      "S      556\n",
+      "F      162\n",
+      "Name: count, dtype: int64\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\randa\\AppData\\Local\\Temp\\ipykernel_58680\\251356151.py:13: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '0        N\n",
+      "1        N\n",
+      "2        N\n",
+      "3        N\n",
+      "4        N\n",
+      "        ..\n",
+      "21886    Q\n",
+      "21887    Q\n",
+      "21888    Q\n",
+      "21889    Q\n",
+      "21890    Q\n",
+      "Name: 0.000000000000000000e+00.65, Length: 21891, dtype: object' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
+      "  test_df.iloc[:, -1] = test_df.iloc[:, -1].replace(labels)\n"
+     ]
+    }
+   ],
    "source": [
-    "x_data = data_df.iloc[:, 2:]\n",
-    "y_label = data_df[['type']]"
+    "# x_data = data_df.iloc[:, 2:]\n",
+    "# y_label = data_df[['type']]\n",
+    "\n",
+    "\n",
+    "labels = {\n",
+    "    0.0: \"N\",\n",
+    "    1.0: \"S\",\n",
+    "    2.0: \"V\",\n",
+    "    3.0: \"F\",\n",
+    "    4.0: \"Q\"\n",
+    "}\n",
+    "\n",
+    "test_df.iloc[:, -1] = test_df.iloc[:, -1].replace(labels)\n",
+    "\n",
+    "# Now get the value counts for the renamed last column\n",
+    "train_counts = test_df.iloc[:, -1].value_counts()\n",
+    "\n",
+    "# Print the counts\n",
+    "print(train_counts)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_data = test_df.iloc[:,:187]\n",
+    "y_label = test_df.iloc[:,-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "type\n",
-       "N       153546\n",
-       "VEB      20000\n",
-       "SVEB      1958\n",
-       "F          219\n",
-       "Q            6\n",
+       "0.000000000000000000e+00.65\n",
+       "N    18117\n",
+       "Q     1608\n",
+       "V     1448\n",
+       "S      556\n",
+       "F      162\n",
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,17 +204,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\randa\\OneDrive\\Documents\\GitHub\\Neural-Networks-Project\\.venv\\Lib\\site-packages\\sklearn\\preprocessing\\_label.py:114: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
-      "  y = column_or_1d(y, warn=True)\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -177,29 +218,29 @@
    "source": [
     "from torch.utils.data import DataLoader, TensorDataset\n",
     "import torch.nn.functional as F\n",
-    "from common_utils import CNN1D\n",
+    "from common_utils import CNN1D_2\n",
     "\n",
     "\n",
     "label_encoder = LabelEncoder()\n",
     "y = label_encoder.fit_transform(y_label)  # Encode labels without replacement\n",
     "\n",
-    "model_path = \"./model/cnn_model.pth\"\n",
+    "model_path = \"./model/cnn_model2.pth\"\n",
     "num_classes = len(label_encoder.classes_)\n",
-    "loaded_model = CNN1D(num_classes).to(device)  # Reinitialize model with the same architecture\n",
+    "loaded_model = CNN1D_2(num_classes).to(device)  # Reinitialize model with the same architecture\n",
     "loaded_model.load_state_dict(torch.load(model_path, weights_only=True))\n",
     "print(\"Model loaded successfully.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      ", Test Accuracy: 0.8817\n"
+      "Test Accuracy: 0.9830\n"
      ]
     }
    ],
@@ -217,6 +258,7 @@
     "test_loader = DataLoader(test_dataset, batch_size=32, shuffle=False)\n",
     "\n",
     "loaded_model.eval()  # Set the model to evaluation mode\n",
+    "\n",
     "with torch.no_grad():\n",
     "    correct_test = 0\n",
     "    total_test = 0\n",
@@ -230,6 +272,13 @@
     "    accuracy = correct_test / total_test  # Calculate test accuracy\n",
     "    print(f'Test Accuracy: {accuracy:.4f}')\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
