--- a/main.ipynb
+++ b/main.ipynb
@@ -11,12 +11,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We shall evaluate all models on unseen data, the mitbih_test dataset"
+    "We shall evaluate all models on unseen data by combining the ptbdb_normal.csv and ptbdb_abnormal.csv datasets"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -92,16 +92,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(10505, 188)\n",
+      "(4045, 188)\n",
+      "(21891, 188)\n"
+     ]
+    }
+   ],
    "source": [
-    "test_df = dataframes['mitbih_test']"
+    "df_normal = dataframes['ptbdb_normal']\n",
+    "df_abnormal =dataframes['ptbdb_abnormal']\n",
+    "\n",
+    "df_combined = pd.concat([df_normal, df_abnormal], ignore_index=True)\n",
+    "\n",
+    "# Shuffle the combined DataFrame\n",
+    "test_df = df_combined.sample(frac=1, random_state=42).reset_index(drop=True)\n",
+    "\n",
+    "test_df = dataframes['mitbih_test']\n",
+    "print(df_abnormal.shape)\n",
+    "print(df_normal.shape)\n",
+    "print(test_df.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +142,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\randa\\AppData\\Local\\Temp\\ipykernel_58680\\251356151.py:13: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '0        N\n",
+      "C:\\Users\\randa\\AppData\\Local\\Temp\\ipykernel_57492\\251356151.py:13: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '0        N\n",
       "1        N\n",
       "2        N\n",
       "3        N\n",
@@ -161,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +207,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,12 +220,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Loading model"
+    "# Loading CNN model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -226,14 +247,14 @@
     "\n",
     "model_path = \"./model/cnn_model2.pth\"\n",
     "num_classes = len(label_encoder.classes_)\n",
-    "loaded_model = CNN1D_2(num_classes).to(device)  # Reinitialize model with the same architecture\n",
-    "loaded_model.load_state_dict(torch.load(model_path, weights_only=True))\n",
+    "loaded_CNNmodel = CNN1D_2(num_classes).to(device)  # Reinitialize model with the same architecture\n",
+    "loaded_CNNmodel.load_state_dict(torch.load(model_path, weights_only=True))\n",
     "print(\"Model loaded successfully.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -245,33 +266,29 @@
     }
    ],
    "source": [
-    "# Assuming you have a DataLoader for your test dataset\n",
-    "y = label_encoder.fit_transform(y_label.values.ravel())\n",
-    "y = np.eye(num_classes)[y] \n",
+    "from common_utils import evaluateCNN_model\n",
     "\n",
-    "X = x_data\n",
-    "X_test = np.expand_dims(X, axis=1)    # Change axis from 2 to 1\n",
-    "X_test_tensor = torch.tensor(X_test).float()    # Ensure the data is of float type\n",
-    "y_test_tensor = torch.tensor(y).long()   \n",
-    "\n",
-    "test_dataset = TensorDataset(X_test_tensor, y_test_tensor)\n",
-    "test_loader = DataLoader(test_dataset, batch_size=32, shuffle=False)\n",
-    "\n",
-    "loaded_model.eval()  # Set the model to evaluation mode\n",
-    "\n",
-    "with torch.no_grad():\n",
-    "    correct_test = 0\n",
-    "    total_test = 0\n",
-    "    for inputs, labels in test_loader:\n",
-    "        inputs, labels = inputs.to(device), labels.to(device)  # Move to GPU if available\n",
-    "        outputs = loaded_model(inputs)  # Forward pass\n",
-    "        _, predicted = torch.max(outputs.data, 1)\n",
-    "        total_test += labels.size(0)\n",
-    "        correct_test += (predicted == labels.argmax(dim=1)).sum().item()\n",
-    "\n",
-    "    accuracy = correct_test / total_test  # Calculate test accuracy\n",
-    "    print(f'Test Accuracy: {accuracy:.4f}')\n"
+    "test_accuracy = evaluateCNN_model(x_data, y_label, num_classes, loaded_CNNmodel, batch_size=32, device='cuda' if torch.cuda.is_available() else 'cpu')\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "These are the results obtained from the different models\n",
+    "| Model        | Test accuracy |\n",
+    "|--------------|---------------|\n",
+    "| CNN          | 0.9830        |\n",
+    "| Transformers | 0.9786        |\n",
+    "| RNN          | 0.8279        |\n",
+    "| RNN(LSTM)    | 0.8278        |\n",
+    "| RNN(GRU)     | 0.9740        |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -279,6 +296,30 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Loading RNN model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_path = \"./model/simple_rnn_model.pth\"\n",
+    "\n",
+    "rnn_model = RNNModel(inputSize, hiddenSize, numLayers, numClasses)\n",
+    "rnn_model.load_state_dict(torch.load(model_path, weights_only=True))\n",
+    "\n",
+    "num_classes = len(label_encoder.classes_)\n",
+    "loaded_RNNmodel = CNN1D_2(num_classes).to(device)  # Reinitialize model with the same architecture\n",
+    "loaded_RNNmodel.load_state_dict(torch.load(model_path, weights_only=True))\n",
+    "print(\"Model loaded successfully.\")"
+   ]
   }
  ],
  "metadata": {
